<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.neko.androidexamples.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/listview"
            android:onClick="onOptionButtonSelected"/>

        <Button
            android:id="@+id/btnViewPager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewpager"
            android:onClick="onOptionButtonSelected"/>

        <Button
            android:id="@+id/btnViewPagerTabbed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/viewpagertabbed"
            android:onClick="onOptionButtonSelected"/>

        <Button
            android:id="@+id/btnRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recycler_view"
            android:onClick="onOptionButtonSelected"/>

        <Button
            android:id="@+id/btnIntents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intents_and_intentfilters"
            android:onClick="onOptionButtonSelected"/>

        <Button
            android:id="@+id/btnFragments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragments"
            android:onClick="onOptionButtonSelected"/>

    </LinearLayout>


</ScrollView>
